--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <groupId>com.eazybytes</groupId>
     <artifactId>loans</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>loans</name>
     <description>Microservice for Loans</description>
 
@@ -93,6 +94,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>pbinay536/loans:s2</name>
+                    </image>
+                </configuration>
             </plugin>
 
             <!-- Compiler Plugin for Lombok Annotation Processing -->
